<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.swarnabook.billing.ui.splash.SplashFragment"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splash_to_dashboard"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.swarnabook.billing.ui.dashboard.DashboardFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_dashboard_to_newInvoice"
            app:destination="@id/newInvoiceFragment" />
        <action
            android:id="@+id/action_dashboard_to_invoiceView"
            app:destination="@id/invoiceViewFragment" />
    </fragment>

    <fragment
        android:id="@+id/newInvoiceFragment"
        android:name="com.swarnabook.billing.ui.newinvoice.NewInvoiceFragment"
        android:label="@string/new_invoice"
        tools:layout="@layout/fragment_new_invoice">
        <argument
            android:name="invoiceId"
            app:argType="long"
            android:defaultValue="-1L" />
        <action
            android:id="@+id/action_newInvoice_to_invoiceView"
            app:destination="@id/invoiceViewFragment"
            app:popUpTo="@id/newInvoiceFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/invoiceViewFragment"
        android:name="com.swarnabook.billing.ui.invoiceview.InvoiceViewFragment"
        android:label="@string/invoice_number"
        tools:layout="@layout/fragment_invoice_view">
        <argument
            android:name="invoiceId"
            app:argType="long"
            android:defaultValue="-1L" />
        <action
            android:id="@+id/action_invoiceView_to_editInvoice"
            app:destination="@id/newInvoiceFragment" />
    </fragment>

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.swarnabook.billing.ui.history.HistoryFragment"
        android:label="@string/nav_history"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_history_to_invoiceView"
            app:destination="@id/invoiceViewFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.swarnabook.billing.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
